--- a/HomeWork3/src/index.css
+++ b/HomeWork3/src/index.css
@@ -12,6 +12,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+p.errorC {
+  color: red;
+}
 
 a {
   font-weight: 500;
